microservice/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: email-processor
  labels:
    name: email-processor
    environment: dev
